Tue Jun 24 17:57:53 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkprefs.c, boards.xml: preview 3D boards, 3D board designs.

Mon Jun 16 21:28:35 2003  Joern Thyssen  <jth@gnubg.org>

	* Makefile.am, configure.in: autoconf magic for BOARD3D.

Mon Jun  9 23:20:00 2003  Joern Thyssen  <jth@gnubg.org>

	Allow modifications of the match length during edit.

	* gtkboard.c (board_init): add spin button for match length.
	* gtkboard.c (score_updated): new function.
	* gtkboard.c (board_edit): issue "set matchid ..." when match 
	length changes.

Sun Jun  8 21:39:30 2003  Joern Thyssen  <jth@gnubg.org>

	Change how cubeful equities are calculated for money play to match
	match play. 
 	(reported by Robert Eberlein and Michael Depreli)

        * eval.c (MoneyLive): new function.
        * eval.c (Cl2CfMoney): rewrite code so it's similar to the
        match play code.

Sun Jun  8 22:09:03 2003  Joern Thyssen  <jth@gnubg.org>

       	New Cube temperature map
        (suggested by Albert Silver)

        * show.c (CommandShowTemperatureMap): new subcommand "=cube" to
        show temp. map for cube decision.
        * gtkgame.c: new menu entry for "show temperaturemap =cube".
        * gtktempmap.c (TempMapEquities): scale cubeful equity.
        * gtkcube.c (CreateCubeAnalysisTools): new button for temperature map.

Sun Jun  8 21:41:09 2003  Joern Thyssen  <jth@gnubg.org>

	Fix bug: gnubg crashes when saving or analysing a match
	where the manual dice dialog was cancelled on the first move of 
	the match.
        (reported by Michael Depreli)

        * play.c (NewGame): initialise plGame and plLastMove to
        avoid crashes.
	* play.c (ApplyGameOver): pass correct game.

Sun Jun  8 21:43:40 2003  Joern Thyssen  <jth@gnubg.org>

        Fix bug: analysis on 0-ply does not stop when interrupted.
        (reported by Michael Depreli)

        * analysis.c (AnalyzeMove): return -1 if interrupted.

Sat Jun  7 10:13:31 2003  Joern Thyssen  <jth@gnubg.org>
