@@ -1,3 +1,8 @@
+Thu Jul 31 18:23:52 2003  Joern Thyssen  <jth@gnubg.org>
+
+	* gtkprefs.c (toggle_display_type): gtk_notebook_get_n_pages does
+	exist in gtk+ 2???
+
 Tue Jun 24 17:57:53 2003  Joern Thyssen  <jth@gnubg.org>
 
 	* gtkprefs.c, boards.xml: preview 3D boards, 3D board designs.
